monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A0112/A0112c.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A0112;

grammar A0112c {

  Foo = "foo";

  enum Bar = "bar";

  enum Bar = "foo";

}
